--- a/src/RentalNorth/appsettings.json
+++ b/src/RentalNorth/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "DefaultConnection": {
-      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=aspnet5-RentalNorth-da23e39f-7a7c-46ed-8bc6-e538fd3024fd;Trusted_Connection=True;MultipleActiveResultSets=true"
+      "ConnectionString": "Server=tcp:pointofnoreturn.database.windows.net,1433;Database=RentalNorth;User ID=jonas889@pointofnoreturn;Password={Jonas123};Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=true"
     }
   },
   "Logging": {
